--- a/XDLogin/XDLogin/Base.lproj/Main.storyboard
+++ b/XDLogin/XDLogin/Base.lproj/Main.storyboard
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="Avenir.ttc">
-            <string>Avenir-Book</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -241,7 +236,7 @@
                             <outlet property="delegate" destination="paD-BL-jvo" id="rLv-uf-Vk3"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Grocery List" image="eggplant" selectedImage="eggplant" id="fQ0-vb-nDc"/>
+                    <tabBarItem key="tabBarItem" title="Grocery List" image="shopping-list" selectedImage="shopping-list" id="fQ0-vb-nDc"/>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Grocery List" id="Pay-a7-9AD">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="2d2-Dh-QyI"/>
@@ -295,7 +290,7 @@
                             <outlet property="delegate" destination="BpU-0i-5Os" id="KSO-wT-K3q"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Pantry" image="shopping-list" id="PbS-vq-F0O"/>
+                    <tabBarItem key="tabBarItem" title="Pantry" image="eggplant" id="PbS-vq-F0O"/>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Pantry List" id="fiA-1Q-Q2I">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="bqj-fQ-311"/>
@@ -306,7 +301,7 @@
             </objects>
             <point key="canvasLocation" x="4455" y="95"/>
         </scene>
-        <!--Scanner Controller-->
+        <!--Scanner-->
         <scene sceneID="Q4s-zB-AaY">
             <objects>
                 <viewController id="lpy-wU-mhj" customClass="QRScannerController" customModule="XDLogin" customModuleProvider="target" sceneMemberID="viewController">
@@ -315,7 +310,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.60000002384185791" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No barcode is detected." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NfQ-To-EhX">
-                                <rect key="frame" x="0.0" y="627" width="375" height="40"/>
+                                <rect key="frame" x="0.0" y="578" width="375" height="40"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="WRT-sa-bKX"/>
@@ -368,6 +363,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="nNq-he-CQi"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Scanner" image="barcode" id="9Av-pe-XY3"/>
                     <connections>
                         <outlet property="messageLabel" destination="NfQ-To-EhX" id="ZuU-ho-QP7"/>
                         <outlet property="topBar" destination="1o4-G5-r6n" id="kFI-ya-oDc"/>
@@ -394,6 +390,7 @@
                     <connections>
                         <segue destination="paD-BL-jvo" kind="relationship" relationship="viewControllers" id="0xa-Ec-jWa"/>
                         <segue destination="BpU-0i-5Os" kind="relationship" relationship="viewControllers" id="J5e-Sx-alQ"/>
+                        <segue destination="lpy-wU-mhj" kind="relationship" relationship="viewControllers" id="DWB-u4-Dtb"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Eh5-g1-hra" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -405,13 +402,14 @@
         <image name="Login Page" width="375" height="667"/>
         <image name="Sign up page" width="375" height="667"/>
         <image name="Splash page" width="375" height="667"/>
+        <image name="barcode" width="32" height="32"/>
         <image name="cross" width="40" height="40"/>
         <image name="eggplant" width="32" height="32"/>
         <image name="shopping-list" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="BUe-A0-veo"/>
-        <segue reference="J5e-Sx-alQ"/>
+        <segue reference="cYn-a4-zcV"/>
         <segue reference="QyY-AR-JIH"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.42590153879999998" green="0.37582338240000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
